--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -28,5 +28,7 @@
 <input type="hidden" name="next" value="{{ next }}">
 
 <button type="submit" style="margin-top: 15px;">Entrar</button>
+
+<a href="{% url 'signup' %}">Registrarse</a>
 </form>
 
