ux/ui: modifacar templates para mejorar el diseño
crear hoja de estilos en cascada para el diseño del proyecto, modificaciones necesarias a los templates

--- a/templates/home.html
+++ b/templates/home.html
@@ -1,11 +1,15 @@
+{% extends "base.html" %}
+
+{% block title %}Inicio{% endblock %}
+
+{% block content %}
+
+<div class="home-container">
+
   <h1>Bienvenido, {{ user.username }} 👋</h1>
   <p>Has iniciado sesión correctamente.</p>
 
-    {% if user.is_authenticated %}
-    <form action="{% url "logout" %}" method="post">
-        {% csrf_token %}
-        <button>Cerrar sesion</button>
-    </form>
-    {% else %}
-        <a href="{% url "login" %}">Login</a>
-    {% endif %}
+</div>
+
+{% endblock content %}
+
