--- a/templates/base.html
+++ b/templates/base.html
@@ -1,13 +1,51 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Autenticador</title>
+    <link rel="stylesheet" href="{% static 'styles.css' %}">
+    <title>{% block title %}Autenticador{% endblock %}</title>
 </head>
+
+
 <body>
     
-    incio
+    <header>
+    
+        <div>LOGO</div>
+    
+        <div class="menu">
+            {% if user.is_authenticated %}
+                <span>{{ user.username }}</span>
+                <form action="{% url 'logout' %}" method="post" style="display:inline;">
+                    {% csrf_token %}
+                    <button type="submit">Cerrar sesión</button>
+                </form>
+            {% else %}
+                <a href="{% url 'login' %}">Iniciar sesión</a>
+            {% endif %}
+        </div>
+    
+    </header>
+    
+
+    <main>
+
+        {% block content %}
+        
+        {% endblock %}
+
+    </main>
+
+
+    <footer>
+    
+
+    
+    </footer>
 
 </body>
+
+
 </html>
