--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -1,5 +1,12 @@
+{% extends "base.html" %}
 
-<h2>Registro de usuario</h2>
+{% block title %}Registro{% endblock  %}
+
+{% block content %}
+
+<div class="signup-container">
+
+    <h2>Registro de usuario</h2>
 
 {% if form.errors %}
     <ul style="color: red;">
@@ -67,4 +74,9 @@
 </form>
 
 <p>¿Ya tienes cuenta? <a href="{% url 'login' %}">Inicia sesión</a></p>
+
+</div>
+
+{% endblock content %}
+
 
