--- a/static/styles.css
+++ b/static/styles.css
@@ -61,36 +61,129 @@ main {
     padding-bottom: 20%;
 }
 
-/* Login form */
-.login-container form {
+
+.login-form {
     display: flex;
     flex-direction: column;
-    align-items: flex-start; /* todos empiezan desde la izquierda */
+    align-items: center; 
     gap: 15px;
 }
 
-/* Centrar horizontalmente solo los inputs */
-.login-container input[type="text"],
-.login-container input[type="password"] {
-    width: 500px;
-    display: block;
-    margin: 0 auto; /* esto centra solo los inputs */
-    padding: 10px;
+.login-form button{
+    width: 70px;
+    height: 40px;
+    background-color: #f0f0f0;
+    color: black;
+    border: none;
+    border-radius: 5px;
 }
 
-/* Botón y enlace */
-.login-container button,
-.login-container a {
-    width: auto;  /* no se expanden */
-    margin: 0 auto; /* opcional, centra horizontalmente */
-    display: inline-block; /* mantener ancho natural */
+.login-form button:hover {
+    transition: transform 0.4s;
+    transition: background-color 0.3s ease;
+    transform: scale(1.15);
+    background-color: #3498db;
+    color: white;
 }
+
+.login-data {
+    display: flex;
+    flex-direction: column;
+    display: flex;
+    margin: 0 auto;
+    gap: 15px;
+}
+
+.login-username,
+.login-password  {
+    display: flex;
+    flex-direction: column;
+    gap: 5px;
+}
+
+.login-data--input {
+    display: flex;
+    justify-content: center;
+    width: 300px;
+    height: 30px;
+    border-radius: 100px;
+    border: 1px solid #c0c0c0;
+    outline: none;
+}
+
+.login-data--input input {
+    width: 270px;
+    border: none;
+    outline: none;
+}
+
+
+.signup-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    padding-bottom: 10%;
+}
+
+
+.signup-form {
+    display: flex;
+    flex-direction: column;
+    align-items: center; 
+    gap: 15px;
+}
+
+.signup-username,
+.signup-email,
+.signup-password,
+.signup-password2 {
+    display: flex;
+    flex-direction: column;
+    display: flex;
+    margin: 0 auto;
+    gap: 5px;
+} 
+
+.signup-data--input {
+    display: flex;
+    justify-content: center;
+    width: 300px;
+    height: 30px;
+    border-radius: 100px;
+    border: 1px solid #c0c0c0;
+    outline: none;
+}
+
+.signup-data--input input {
+    width: 270px;
+    border: none;
+    outline: none;
+}
+
+.signup-form button{
+    width: 90px;
+    height: 40px;
+    background-color: #f0f0f0;
+    color: black;
+    border: none;
+    border-radius: 5px;
+}
+
+.signup-form button:hover {
+    transition: transform 0.4s;
+    transition: background-color 0.3s ease;
+    transform: scale(1.15);
+    background-color: #3498db;
+    color: white;
+}
+
 
 footer {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    padding: 0 20px; /* reemplaza 'auto 20px' */
+    padding: 0 20px;
     background: #3498db;
     color: white;
 }
