--- a/users/templates/users/login.html
+++ b/users/templates/users/login.html
@@ -35,6 +35,7 @@
                     required
                     >
                 </div>
+                <a href="{% url 'password_reset' %}">¿Olvidaste tu contraseña?</a>
             </div>
 
         </div>
