feat: crear funcion de captcha para registro de usuarios nuevos
crear funcion de captch, modificar su apariencia desde settings, añadir bibilioteca django-simple-captcha a requirements.txt

--- a/users/templates/users/signup.html
+++ b/users/templates/users/signup.html
@@ -78,6 +78,10 @@
             </div>
         </div>
 
+        <div class"signup-captcha">
+            {{ form.captcha }}  
+        </div>
+
         <button type="submit" style="margin-top: 15px;">Registrarse</button>
     </form>
 
